test/io/sungeun/funcPtr5.good
funcPtr5.chpl:1: In iterator 'blah':
funcPtr5.chpl:2: error: Iterators not allowed in first class functions
